[ADD] search across repositories
