# proxy-server/swagger_server/models/search.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from swagger_server.models.concept import Concept
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class Search(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, query: str=None, results: List[Concept]=None):
+        """
+        Search - a model defined in Swagger
+
+        :param query: The query of this Search.
+        :type query: str
+        :param results: The results of this Search.
+        :type results: List[Concept]
+        """
+        self.swagger_types = {
+            'query': str,
+            'results': List[Concept]
+        }
+
+        self.attribute_map = {
+            'query': 'query',
+            'results': 'results'
+        }
+
+        self._query = query
+        self._results = results
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Search':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The search of this Search.
+        :rtype: Search
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def query(self) -> str:
+        """
+        Gets the query of this Search.
+
+        :return: The query of this Search.
+        :rtype: str
+        """
+        return self._query
+
+    @query.setter
+    def query(self, query: str):
+        """
+        Sets the query of this Search.
+
+        :param query: The query of this Search.
+        :type query: str
+        """
+
+        self._query = query
+
+    @property
+    def results(self) -> List[Concept]:
+        """
+        Gets the results of this Search.
+
+        :return: The results of this Search.
+        :rtype: List[Concept]
+        """
+        return self._results
+
+    @results.setter
+    def results(self, results: List[Concept]):
+        """
+        Sets the results of this Search.
+
+        :param results: The results of this Search.
+        :type results: List[Concept]
+        """
+
+        self._results = results
+
