# repositories/bioportal/models/meta_pages.py
@@ -1,0 +1,175 @@
+# coding: utf-8
+
+"""
+    NCBO BioPortal API
+
+    No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+
+    OpenAPI spec version: 1.0.0
+    Contact: apiteam@swagger.io
+    Generated by: https://github.com/swagger-api/swagger-codegen.git
+"""
+
+
+from pprint import pformat
+from six import iteritems
+import re
+
+
+class MetaPages(object):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+
+
+    """
+    Attributes:
+      swagger_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    swagger_types = {
+        '_self': 'str',
+        'next': 'str',
+        'pages': 'str'
+    }
+
+    attribute_map = {
+        '_self': 'self',
+        'next': 'next',
+        'pages': 'pages'
+    }
+
+    def __init__(self, _self='page', next='nextPage', pages='pageCount'):
+        """
+        MetaPages - a model defined in Swagger
+        """
+
+        self.__self = None
+        self._next = None
+        self._pages = None
+
+        if _self is not None:
+          self._self = _self
+        if next is not None:
+          self.next = next
+        if pages is not None:
+          self.pages = pages
+
+    @property
+    def _self(self):
+        """
+        Gets the _self of this MetaPages.
+
+        :return: The _self of this MetaPages.
+        :rtype: str
+        """
+        return self.__self
+
+    @_self.setter
+    def _self(self, _self):
+        """
+        Sets the _self of this MetaPages.
+
+        :param _self: The _self of this MetaPages.
+        :type: str
+        """
+
+        self.__self = _self
+
+    @property
+    def next(self):
+        """
+        Gets the next of this MetaPages.
+
+        :return: The next of this MetaPages.
+        :rtype: str
+        """
+        return self._next
+
+    @next.setter
+    def next(self, next):
+        """
+        Sets the next of this MetaPages.
+
+        :param next: The next of this MetaPages.
+        :type: str
+        """
+
+        self._next = next
+
+    @property
+    def pages(self):
+        """
+        Gets the pages of this MetaPages.
+
+        :return: The pages of this MetaPages.
+        :rtype: str
+        """
+        return self._pages
+
+    @pages.setter
+    def pages(self, pages):
+        """
+        Sets the pages of this MetaPages.
+
+        :param pages: The pages of this MetaPages.
+        :type: str
+        """
+
+        self._pages = pages
+
+    def to_dict(self):
+        """
+        Returns the model properties as a dict
+        """
+        result = {}
+
+        for attr, _ in iteritems(self.swagger_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+
+        return result
+
+    def to_str(self):
+        """
+        Returns the string representation of the model
+        """
+        return pformat(self.to_dict())
+
+    def __repr__(self):
+        """
+        For `print` and `pprint`
+        """
+        return self.to_str()
+
+    def __eq__(self, other):
+        """
+        Returns true if both objects are equal
+        """
+        if not isinstance(other, MetaPages):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """
+        Returns true if both objects are not equal
+        """
+        return not self == other
